# seine-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  salmon.rs
