[package]
name = "seine"
version = "0.1.0"
authors = ["Jason Fan <jason.fan.74@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
flate2 = "1.0.17"
serde = {version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
